<resources>
    <string name="app_name">SavicsTask</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_share">Share</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="current_username">Current userName</string>
    <string name="current_nubmer_of_added_patients">Current nubmer of added patients</string>
    <string name="max_nubmer_of_patients_allowed">Max nubmer of patients Allowed</string>
    <string name="_5">5</string>
    <string name="save">Save</string>
    <string name="add_a_new_patient">Add a new patient</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="mal">Mal</string>
    <string name="female">Femal</string>
    <string name="other">Other</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="_0">0</string>
</resources>